Updated object and geometry data types #4 #5
### Added

- `patternProperties` for the `object` data type
- `geometryTypes` for the `geometry` data type

### Changed

- Data type `object` requires any of `properties`, `patternProperties` or `additionalProperties` instead of requiring always `properties`

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -11,4 +11,4 @@ jobs:
           node-version: "lts/*"
       - uses: actions/checkout@v4
       - run: npm install -g ajv-cli
-      - run: ajv compile -s schema/schema.json --spec=draft2020 --validate-formats=false --strict=true
+      - run: ajv compile -s schema/schema.json --spec=draft2020 --validate-formats=false --strict=true --strict-required=false
